@@ -3,6 +3,13 @@ Java source code pertaining to the features of latest early access builds.
 
 Refer this link for the bleeding edge of java tech: https://jdk.java.net/
 
+## Java 24
+Download Java binary from here: https://jdk.java.net/24/
+
+Features: https://openjdk.org/projects/jdk/24/
+
+Run it with: java **--enable-preview** PrimitiveTypesSwitch.java
+
 ## Java 23
 Download Java binary from here: https://jdk.java.net/23/
 
